<resources>
    <string name="app_name">Sports App</string>
    <string name="ratings">Ratings</string>
    <string name="matches">Matches</string>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="team_icon">Team Icon</string>
    <string name="oops_no_notifications_yet">Oops! No notifications yet</string>
    <string name="not_able_to_fetch_news_right_now_try_again_later">Not able to fetch news right now!\nTry again later.</string>
    <string name="no_results_found_yet_for_this_team">No result found for this!\nTry again later.</string>
    <string name="back">Back</string>
    <string name="team_icon_transition">%d-TeamIcon</string>
    <string name="team_name_transition">%d-TeamName</string>
    <string name="player_icon_transition">%d-PlayerIcon</string>
    <string name="team_details">Team Details</string>
    <string name="overview">Overview</string>
    <string name="result">Result</string>
    <string name="go_to_matches">Go To Matches</string>
    <string name="player_image">Player Image</string>
    <string name="socials">Socials</string>
    <string name="name">Name</string>
    <string name="birth">Birth</string>
    <string name="country">Country</string>
    <string name="bio">Bio</string>
    <string name="flag">Flag\n</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="x_twitter">X (Twitter)</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="https_www_facebook_com">https://www.facebook.com/</string>
    <string name="https_twitter_com">https://twitter.com/</string>
    <string name="https_www_instagram_com">https://www.instagram.com</string>
    <string name="https_www_whatsapp_com">https://www.whatsapp.com/</string>
    <string name="arpit_bandil">Arpit Bandil</string>
    <string name="i_am_fullstack_developer_with_various_technologies_explored_expert_in_android_development_visit_https_github_com_arpitbandil_to_know_more">I am fullstack developer. Visit https://github.com/arpitbandil to know more!🧑🏻‍💻</string>
    <string name="august_6_1996">August, 6 1996</string>
    <string name="linkedin">LinkedIn</string>
</resources>