<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.player.PlayerDetailFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <ImageView
            android:id="@+id/iv_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@color/window_bg"
            android:contentDescription="@string/player_image"
            android:maxHeight="300dp"
            android:paddingVertical="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <View
            android:id="@+id/iv_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_gradient"
            app:layout_constraintBottom_toBottomOf="@+id/iv_player"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/iv_bottom2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_gradient"
            app:layout_constraintBottom_toBottomOf="@id/iv_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/iv_player"
            app:layout_constraintTop_toBottomOf="@id/iv_player"
            tools:text="@string/app_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_positions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toStartOf="@id/iv_icon"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:itemCount="4"
            tools:listitem="@layout/item_game_chip" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_positions"
            app:tabGravity="start"
            app:tabIndicatorColor="@color/colorPrimaryText"
            app:tabInlineLabel="true"
            app:tabMode="scrollable"
            app:tabPaddingEnd="16dp"
            app:tabPaddingStart="16dp"
            app:tabSelectedTextColor="@color/colorPrimaryText"
            app:tabTextAppearance="@style/TabLayoutText">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textAllCaps="true" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textAllCaps="true" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/socials"
                android:textAllCaps="true" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="start"
            android:adjustViewBounds="true"
            android:contentDescription="@string/back"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorPrimaryText" />

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_off_gray_6_stroke"
            android:contentDescription="@string/team_icon"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@+id/tab_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintWidth_percent="0.3"
            tools:src="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
