<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="@id/barrier"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/birth"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="@id/barrier"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/country"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="@id/barrier"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_birth" />

        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/bio"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="@id/barrier"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_country" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="tv_name,tv_bio,tv_birth,tv_country" />

        <TextView
            android:id="@+id/tv_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/tv_name"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/tv_birth_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/tv_birth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/tv_birth"
            tools:text="@tools:sample/full_names" />

        <ImageView
            android:id="@+id/iv_flag"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/flag"
            app:layout_constraintBottom_toBottomOf="@id/tv_country"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/tv_country_value"
            app:layout_constraintTop_toTopOf="@id/tv_country"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/tv_country_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/tv_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/tv_country"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/tv_bio_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/tv_bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_country_value"
            app:layout_constraintTop_toTopOf="@id/tv_bio"
            tools:text="@tools:sample/full_names" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
